<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9F8F9"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.lussis6.Clerk_IssueItems" >

    <TextView
        android:id="@+id/textViewRepName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewLabelRepName"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/textViewLabelRepName"
        android:text="@string/Issue_Item_Rep_Name_Actual"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/listViewIssueItemsNew"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignLeft="@+id/textViewEmptyItemListWarning"
        android:layout_alignRight="@+id/buttonCollected"
        android:layout_below="@+id/textViewEmptyItemListWarning" >

    </ListView>

    <Button
        android:id="@+id/buttonCancelDelivery"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCollected"
        android:layout_alignBottom="@+id/buttonCollected"
        android:layout_alignLeft="@+id/listViewIssueItemsNew"
        android:background="@drawable/submit_btn_red"
        android:text="@string/issue_CancelDelivery" />

    <Button
        android:id="@+id/buttonCollected"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listViewIssueItemsNew"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="39dp"
        android:layout_toRightOf="@+id/textViewRepName"
        android:background="@drawable/submit_btn_blue"
        android:text="@string/Issue_Item_Collected" />

    <TextView
        android:id="@+id/textViewLabelRepName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="14dp"
        android:text="@string/Issue_Item_RepName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewEmptyItemListWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewLabelRepName"
        android:layout_below="@+id/textViewLabelRepName"
        android:layout_marginTop="10dp"
        android:text="empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
